--- a/index.html
+++ b/index.html
@@ -263,12 +263,14 @@
           <div class="article-container">
             <img src="./assets/project-1.png" alt="Project 1" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Project One</h2>
+          <h2 class="experience-sub-title project-title">Country Directory</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn"
+              onclick="window.open('https://github.com/Pizaan22/Country-Directory', '_blank')">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn"
+              onclick="window.open('https://raw.githack.com/Pizaan22/Country-Directory/main/index.html', '_blank')">
               Live Demo
             </button>
           </div>
@@ -277,12 +279,14 @@
           <div class="article-container">
             <img src="./assets/project-2.png" alt="Project 2" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Project Two</h2>
+          <h2 class="experience-sub-title project-title">Line-Line Intersection Calculator</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn"
+              onclick="window.open('https://github.com/Pizaan22/Line-Line-Intersection-Calculator','_blank')">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn"
+              onclick="window.open('https://raw.githack.com/Pizaan22/Line-Line-Intersection-Calculator/main/testCanvas.html','_blank')">
               Live Demo
             </button>
           </div>
@@ -291,12 +295,12 @@
           <div class="article-container">
             <img src="./assets/project-3.png" alt="Project 3" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Project Three</h2>
+          <h2 class="experience-sub-title project-title">Portfolio</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('https://github.com/Pizaan22/Portfolio_Site')">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/'">
+            <button class="btn btn-color-2 project-btn" onclick="window.open('#')">
               Live Demo
             </button>
           </div>
