Added Folder structure

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -334,6 +334,7 @@
         </ul>
       </div>
     </nav>
+    <p>This page has been viewed <a id="counter"></a> times :)</p><br>
     <p>Copyright &#169; 2024 Pizaan Tadiwala. All Rights Reserved.</p>
   </footer>
   <script src="script.js"></script>
